SET( LIB_NAME OpenIG-Bullet )
SET( HEADER_PATH ${PROJECT_SOURCE_DIR}/Library-Bullet )
ADD_DEFINITIONS( -DIGLIBBULLET_LIBRARY )

SET( LIB_PUBLIC_HEADERS
    ${HEADER_PATH}/Export.h
	${HEADER_PATH}/BulletManager.h
	${HEADER_PATH}/ConfigReader.h	
	${HEADER_PATH}/Vehicle.h	
)

SET( LibBulletSourceFiles
    BulletManager.cpp
	ConfigReader.cpp
	Vehicle.cpp
)

ADD_LIBRARY( ${LIB_NAME} SHARED
    ${LIB_PUBLIC_HEADERS}
    ${LibBulletSourceFiles}
)

INCLUDE_DIRECTORIES(
	${Boost_INCLUDE_DIRS}
	${BULLET_INCLUDE_DIR}
	${OSGBULLET_INCLUDE_DIR}
)

TARGET_LINK_LIBRARIES( ${LIB_NAME}    
	${OSG_LIBRARIES}
	${OSGBULLET_LIBRARIES}
	${BULLET_LIBRARIES}
	${Boost_LIBRARIES}
	OpenIG-Base
)

SET_TARGET_PROPERTIES( ${LIB_NAME} PROPERTIES VERSION ${OPENIG_VERSION} )
SET_TARGET_PROPERTIES( ${LIB_NAME} PROPERTIES SOVERSION ${OPENIG_VERSION} )
SET_TARGET_PROPERTIES( ${LIB_NAME} PROPERTIES PROJECT_LABEL "Library Bullet" )
SET_TARGET_PROPERTIES (${target} PROPERTIES DEFINE_SYMBOL  "IGLIBBULLET_LIBRARY")

INCLUDE( ModuleInstall REQUIRED )
