SET( LIB_NAME OpenIG-Networking )
SET( HEADER_PATH ${PROJECT_SOURCE_DIR}/Library-Networking )
ADD_DEFINITIONS( -DIGLIBNETWORKING_LIBRARY )

SET( LIB_PUBLIC_HEADERS
    ${HEADER_PATH}/Export.h
	${HEADER_PATH}/Buffer.h		
	${HEADER_PATH}/Network.h
	${HEADER_PATH}/Packet.h
	${HEADER_PATH}/UDPNetwork.h
	${HEADER_PATH}/Parser.h
	${HEADER_PATH}/TCPServer.h
	${HEADER_PATH}/TCPClient.h
	${HEADER_PATH}/Error.h
	${HEADER_PATH}/Factory.h
)

SET( LibNetworkingSourceFiles
    Buffer.cpp
	Network.cpp
	Packet.cpp
	UDPNetwork.cpp
	TCPServer.cpp
	TCPClient.cpp
	Factory.cpp
)

ADD_LIBRARY( ${LIB_NAME} SHARED
    ${LIB_PUBLIC_HEADERS}
    ${LibNetworkingSourceFiles}
)

INCLUDE_DIRECTORIES(
	${Boost_INCLUDE_DIRS}	
)

TARGET_LINK_LIBRARIES( ${LIB_NAME}    
	${Boost_LIBRARIES}
)

SET_TARGET_PROPERTIES( ${LIB_NAME} PROPERTIES VERSION ${OPENIG_VERSION} )
SET_TARGET_PROPERTIES( ${LIB_NAME} PROPERTIES SOVERSION ${OPENIG_VERSION} )
SET_TARGET_PROPERTIES( ${LIB_NAME} PROPERTIES PROJECT_LABEL "Library Networking" )
SET_TARGET_PROPERTIES (${target} PROPERTIES DEFINE_SYMBOL  "IGLIBNETWORKING_LIBRARY")

INCLUDE( ModuleInstall REQUIRED )

